codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__agents_overview_markdown_table.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 934
expression: "normalize_agent_center_snapshot(render_bottom_popup(&app.chat_widget, 96))"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
  Agent command center  Group: Project  g
   All 1   Needs you 0   Working 0   Ready 1   Inactive 0                 tab/shift+tab filter
  ────────────────────────────────────────────────────────────────────────────────────────────
      Tasks                                           │ Task details
  /tmp/project  1                                     │
  › ○ Review parser                                   │ Review parser
                                                      │ ○ Ready
                                                      │
                                                      │ Last message
                                                      │  Check     Result
                                                      │ ━━━━━━━━  ━━━━━━━━
                                                      │  Parser    Fixed
                                                      │
                                                      │ Project
                                                      │ /tmp/project
                                                      │ Model: Unknown
                                                      │
                                                      │ Prompt
                                                      │ long prompt long prompt long prompt
                                                      │ …
                                                      │
                                                      │
                                                      │
  ? help  esc back  ↑/↓ move  enter open  n new
