codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__agents_overview_recent_sessions.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 633
expression: "age.replace_all(&rendered, \" [age]\")"
---
  Agent command center  Group: Project  g
   All 10   Needs you 0   Working 0   Ready 0   Inactive 10
  ────────────────────────────────────────────────────────────────────────────
      Tasks                        Model               Status         Updated
  /  10
  › ○ Task 12                      Unknown             Inactive [age]
    ○ Task 11                      Unknown             Inactive [age]
    ○ Task 10                      Unknown             Inactive [age]
    ○ Task 9                       Unknown             Inactive [age]
    ○ Task 8                       Unknown             Inactive [age]
    ○ Task 7                       Unknown             Inactive [age]
    ○ Task 6                       Unknown             Inactive [age]
    ○ Task 5                       Unknown             Inactive [age]
    ○ Task 4                       Unknown             Inactive [age]
    ○ Task 3                       Unknown             Inactive [age]

      Show more






  ? help  esc back  ↑/↓ move  enter open  n new
