codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__older_server_narrow_overview.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 112
expression: "render_bottom_popup(&app.chat_widget, 12)"
---
 Elpis · mod
  Agent c…
   All … ›
  ────────
  No tas…



















  Service…
