codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__overview_worktree_creation_busy_state.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 28
expression: "normalize_agent_center_snapshot(render_bottom_popup(&app.chat_widget, 80,))"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
  Agent command center  Group: Project  g
   All 0   Needs you 0   Working 0   Ready 0   Inactive 0
  ────────────────────────────────────────────────────────────────────────────
  No tasks yet



















  Creating worktree…
